--- a/chitiet/1.html
+++ b/chitiet/1.html
@@ -18,6 +18,7 @@ dell-xps131t7n42silver-ultrashap-qhd-ips-touch
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">3.400.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
