--- a/chitiet/6.html
+++ b/chitiet/6.html
@@ -17,6 +17,7 @@ MSI GT72 2QE DOMINATOR PRO
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">11.400.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
