--- a/chitiet/8.html
+++ b/chitiet/8.html
@@ -17,6 +17,7 @@ HP PAVILION 15
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">10.500.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
