--- a/chitiet/9.html
+++ b/chitiet/9.html
@@ -17,6 +17,7 @@ HP 15-ac001TU
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">30.000.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
