--- a/chitiet/10.html
+++ b/chitiet/10.html
@@ -17,6 +17,7 @@ HP 22-2027d AiO 21.5 Touch
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">40.400.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
