--- a/chitiet/4.html
+++ b/chitiet/4.html
@@ -17,6 +17,7 @@ Dell Inspiron N5558A
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">6.700.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
