--- a/chitiet/5.html
+++ b/chitiet/5.html
@@ -17,6 +17,7 @@ Dell Inspiron 7548
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">6.400.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
