--- a/chitiet/7.html
+++ b/chitiet/7.html
@@ -17,6 +17,7 @@ MSI GS70 2QE STEALTH PRO
 </a>
 </h3>
 <h3 class="mota">Mô tả sản phẩm:</h3>
+<p class="giaban">3.400.000</p>
 <p>
 	Mã hàng: XPS13 (1T7N42)<br>
 	Bảo hành: 12 Tháng<br>
